* Added the next reference RTF file and finished up the last section test.
* Moved common test case code into utils.RTFTestCase and updated the sections
test case.
* Cleaned up imports in section test file.
* Cleaned up some whitespace in the paragraph file.
* Started on the paragraph tests.
* Did some more RTFTestCase abstraction.
* Updated the generate script.
* Finished the first para test.

2008.02.27

* Moved examples into test dir to serve as the basis for unit tests.
* Added prototype RTF parsing code from Pecha project.
* Added TextEdit test RTF files from Mac OS X.
* Updated TODO.
* Fixed remaining whitespace issue in setup.py.
* Created exceptions file.
* Split grammar into its own file.
* Made grammar module-level variable (singleton) instead of instantiated class.
* Updated TODO.
* Renamed pyrtfng package to rtfng.
* Added test runner for doctests.
* Added test runner for all tests, and added doctest suite to the runner.
* Added a utility module.
* Added code for recursively adding tests.
* Added images to be used in tests to test/resources.
* Updated TODO.
* Added a write method to Document as a temp fix until the refactor.
* Started moving some code into the new API in order to avoid circular imports.
* Removed * imports from rtfng.__init__.py.
* Removed code from Elements that was copied into the new API.
* Moved Elements.Standard* into PropertySets (which they all instantiate
anyway) as part of avoiding circular imports.

2008.02.26

* Copied Simon Cusack's PyRTF code from version 0.45 as the starting point of
pyrtf-ng.
* Added ChangeLog.
* Added admin directory and scripts.
* Renamed package to pyrtf-ng.
* Updated setup.py.
* Added software license.
* Added a placeholder test directory.
* Added placeholders for parsing and writing code.
* Added TODO file.
* Updated examples to use the new package name and replaced the tabs with
spaces.
* Whitespace cleanup.
* Updated TODO.
* Fixed name in setup.py.
* Added gzipped specs for reference.